# detectedCar

./: .env  .env.example  .gitignore  BACKEND_CORS_SETUP.md  README.md  alembic.ini  api.py  docker-compose.yml  fast_api.py  index.html  models.py  nomeroff_app.py  pyproject.toml  region_utils.py  requirements.txt  test.py  update_yolo_class.py  yolo_class.py
alembic/: env.py
alembic/versions/: 47c55b82355d_add_user_role.py  add_vehicles_table.py  c2dd35974646_add_user_role.py  c39df08ba1c4_add_plate.py  d0c27179b4ee_add_users.py  f642b9362328_add_users_table.py
chatgpt_plate/: app.py
config/: detection_settings.json
database/: config.py  db.py  main.py  quick_check.py  security.py  uow.py
database/models/: __init__.py  client.py  plate.py  users.py  vehicles.py
database/repositories/: __init__.py  users.py  vehicles.py
database/schemas/: __init__.py  user.py  vehicle.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx  VideoStream.tsx
frontend/src/hooks/: useAuthUser.ts  useDemoVideo.ts  useDetectionSettings.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Events.tsx  Settings.tsx  Users.tsx  Vehicles.tsx
frontend/supabase/: config.toml
server/: index.js
src/: App.tsx
src/components/: ProtectedRoute.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/pages/: Auth.tsx  Dashboard.tsx  Users.tsx
supabase/migrations/: 20251024143320_c0259a86-72a3-48dd-b543-64c2295fcd83.sql
utils/: model_list.py  settings_manager.py  video_stream.py
(+20 files in other folders)
