[project]
name = "detectedcar"
version = "0.1.0"
description = ""
authors = [
    {name = "thebazhenov",email = "thebazhenov@vk.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "ultralytics (>=8.3.214,<9.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.alembic]
